# liftpush

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  build.rs
res/: dictionary_adjectives.txt  dictionary_nouns.txt
src/: assets.rs  auth.rs  config.rs  io.rs  main.rs  rng.rs  splitter.rs  types.rs
src/routes/: auth.rs  files.rs  homepage.rs  manage.rs  mod.rs  modify.rs  upload.rs
static/css/: agate.css  main.css
static/js/: highlight.pack.js  manage.js
templates/: header.hbs  hello.hbs  index.hbs  manage.hbs  scripts.hbs  text.hbs
