[package]
name = "liftpush"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[dependencies]
rocket = "0.3.4"
rocket_codegen = "0.3.4"

serde = "*"
serde_derive = "*"
serde_json = "1.0"

multipart = "0.13.5"

rand = "0.3"
sha2 = "0.7.0"
base64 = "0.8.0"

includedir = "0.2.0"
phf = "0.7.12"

[dependencies.uuid]
version = "0.5"
features = ["v4"]

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.3.4"
default-features = false
features = ["json", "handlebars_templates"]

[build-dependencies]
includedir_codegen = "0.2.0"