[package]
name = "liftpush"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[dependencies]
iron = "0.6.0"
router = "0.6.0"
handlebars = "0.32.4"
handlebars-iron = "0.26.2"
params = "0.8.0"
secure-session = "0.3.1"
persistent = "0.4.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rand = "0.5"
sha2 = "0.7"
base64 = "0.9"

includedir = "0.4.0"
phf = "0.7"

mime_guess = "1.8.6"

chrono = {version = "0.4", features = ["serde"]}

[build-dependencies]
includedir_codegen = "0.4.0"
